# cdirnuts

./: .gitignore  .luarc.json  CMakeLists.txt  CMakePresets.json  LICENCE.md  LUA_API.md  Makefile  README.md  bar.sh  default_init.lua  example.lua  goal_struct.md  main.c  simple_example.lua  vcpkg.json
.github/workflows/: build-release.yml  cmake-single-platform.yml
cmake/: embed_lua.cmake
include/: config.h  config_utils.h  default_lua_script.h  dir.h  dir_utils.h  fs.h  init.h  log.h  lua.h  lua_embed.h  path.h  path_utils.h  preset.h  presets.h
src/: config.c  config_utils.c  dir.c  dir_utils.c  fs.cpp  init.c  log.c  lua.c  lua.cpp  lua_embed.c  main.c  main.cpp  path.c  path_utils.c  preset.c  presets.cpp
tests/: README.md  test.c  test_fs.cpp  test_lua.cpp  test_presets.cpp
